# eopf-mcp

./: .env.example  .gitignore  .gitignore copy  CLAUDE.md  README.md  pyproject.toml  run_api.py  run_chat.py  run_gradio.py
config/: config.example.yaml
docs/: API_USAGE.md  ARCHITECTURE.md  CONFIG_REFERENCE.md  DEPLOY_FRONTEND.md  EXAMPLE_QUERIES.md  LOCAL_LLM_SETUP.md  OVH_SETUP.md  QUICK_START.md
examples/: README.md  api_client_example.py  api_curl_example.sh
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AssistantMessage.jsx  ChatArea.jsx  ChatInput.jsx  MapVisualization.jsx  Message.jsx  Sidebar.jsx  TitilerTestWindow.jsx  ToolCallCard.jsx  Untitled-1.ipynb  UserMessage.jsx
frontend/src/context/: ChatContext.jsx
frontend/src/services/: api.js
frontend/src/utils/: bandModeDetector.js  mapDataExtractor.js
src/: api_server.py  chat_client.py  chat_handler.py  config.yaml  config_loader.py  gradio_app.py  llm_provider.py  main.py  session_store.py  wget-log
src/.sessions/: 0273f905-9581-4081-b279-082fb194cd23.json  95c02b12-35c9-41d8-aeb5-87d34aa45c20.json  9a257efc-5564-4c9f-a518-210aebe492d7.json  cb92dfa0-5702-4f63-96dc-88bb84de41ba.json
src/eopf_mcp/: __init__.py  mcp_server.py
src/eopf_mcp/api/: __init__.py  models.py  server.py
src/eopf_mcp/chat/: __init__.py  client.py  handler.py
src/eopf_mcp/llm/: __init__.py  config.py  provider.py
src/eopf_mcp/storage/: __init__.py  session_store.py
src/tests/: __init__.py
